RESULTS/AutoSpec/frama-c_mask/out/20_0001/20_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/20_0001/20_merged.c:22:39: error: unterminated comment
   22 |                 loop invariant k < n; /* Your loop condition for inner "for" */;
      |                                       ^
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics
